--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,8 @@
 {
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
-  "framework": "astro"
+  "framework": "astro",
+  "redirects": [
+    // do not write any dashboard-edited domain here 
+  ]
 }
