--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,5 @@
 {
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
-  "framework": "astro",
-  "redirects": [
-    // do not write any dashboard-edited domain here 
-  ]
+  "framework": "astro"
 }
