--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@astrojs/react": "^3.0.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@vercel/analytics": "^1.5.0",
     "astro": "^4.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
